Added gitignore and changed java source version to 1.8